2024-03-81 Franz Holzinger  <franz@ttproducts.de>
    Do not use sanitizer for template file which can be in private folder.

2024-02-28 Franz Holzinger  <franz@ttproducts.de>
    Deprecation no. 87193: function compareUident removed
    Breaking no. 87193: TYPO3\CMS\Core\Crypto\PasswordHashing\SaltedPasswordService has been removed.
    Fix autologin

2024-01-24 Franz Holzinger  <franz@ttproducts.de>
    Deprecation no.81852: - Remove usage of classes
    JambageCom\Div2007\Security\TransmissionSecurity and
    JambageCom\Div2007\Security\StorageSecurity

    Deprecation no.88740: Replace hooks for felogin by events

2023-11-22 Franz Holzinger  <franz@ttproducts.de>
    compatibility 12: replace CmsBackend->pmDrawItem by PageContentPreviewRenderingListener listener
    Deprecation no.81852: - Remove dependency on rsaauth

2023-09-03 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 11.5: remove FilePathSanitizer for files which are not shown directly in the front end.

2022-10-26 Franz Holzinger <franz@ttproducts.de>
    * bugfix: Set correct path for flexform. pi/flexform_ds_pi.xml -> Configuration/FlexForms/flexform_ds.xml
    * bugfix: Set relative language file path of flexform to Resources/Private/Language.

2022-09-19 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 8.7: deprecation no 77934: The field `select_key` of the table `tt_content` is not used in the core and has been removed.

2022-02-24 Franz Holzinger  <franz@ttproducts.de>
    * Add support for PHP 8
    * Replace PATH_site

2022-02-22 Franz Holzinger  <franz@ttproducts.de>
    * compatibility 9: replace PATH_site by \TYPO3\CMS\Core\Core\Environment::getPublicPath() . '/'

2022-02-21 Franz Holzinger  <franz@ttproducts.de>
    Deprecation no.94312: - Remove loginSecurityLevel for FE and BE

2022-02-17 Franz Holzinger  <franz@ttproducts.de>
    Deprecation no.81852: - Deprecate usage of rsaauth

2021-12-16 Franz Holzinger  <franz@ttproducts.de>