@@ -8,7 +8,7 @@ $EM_CONF[$_EXTKEY] = [
     'author' => 'Franz Holzinger',
     'author_email' => 'franz@ttproducts.de',
     'author_company' => 'jambage.com',
-    'version' => '0.13.2',
+    'version' => '0.13.3',
     'constraints' => [
         'depends' => [
             'php' => '8.0.0-8.4.99',
